avoid text overflow

--- a/style.css
+++ b/style.css
@@ -68,5 +68,16 @@ video,
 svg,
 iframe {
   max-width: 100%;
-  display: bloc;
+  display: block;
+}
+
+/* Avoid text overflow */
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
 }
